<resources>

    <string name="app_name">ImpliciteIntent</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_implicite_intent">ImpliciteIntentActivity</string>
	<string name="btn_call">Call</string>
	<string name="btn_dial">Dial</string>
	<string name="btn_browser">Browser</string>
	<string name="btn_email">Email</string>
	<string name="btn_contact">Contact</string>
	<string name="btn_sms">SMS</string>
	
</resources>