
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:orientation="vertical"
        android:gravity="center"
        android:background="#FF0000">

        <Button
            android:id="@+id/btn_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_call" />

        <Button
            android:id="@+id/btn_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_dial" />

        <Button
            android:id="@+id/btn_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_browser" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_email" />

        <Button
            android:id="@+id/btn_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_contact" />

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sms" />

    </LinearLayout>
